@@ -336,10 +336,13 @@ __mysql_getrow_g_db_handle(gdbi_db_handle_t* dbh)
 	case FIELD_TYPE_SHORT:
 	case FIELD_TYPE_INT24:
 	case FIELD_TYPE_LONG:
-	case FIELD_TYPE_LONGLONG:
 	case FIELD_TYPE_DECIMAL:
 	  value_str = strndup(row[f],les[f]);
 	  value = scm_from_long(atoi(value_str));
+	  break;
+	case FIELD_TYPE_LONGLONG:
+	  value_str = strndup(row[f],les[f]);
+	  value = scm_from_long_long(atoll(value_str));
 	  break;
 	case FIELD_TYPE_FLOAT:
 	case FIELD_TYPE_DOUBLE: 
